<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:padding="5dp" android:layout_width="wrap_content" android:id="@+id/main_layout"
	android:keepScreenOn="false" android:background="@drawable/background">
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/postal_code_service_main_layout"
		android:orientation="vertical">

		<!-- <TextView android:layout_height="wrap_content" android:background="#f3696c"
			android:text="@string/postal_code_app_title"
			android:id="@+id/postal_code_service_title"
			android:layout_width="fill_parent" android:padding="5dp"
			android:textSize="16dp" android:textStyle="bold"></TextView> -->
			<TextView android:id="@+id/postal_code_service_title" 
			android:text="@string/postal_code_app_title" 
			style="@style/title_style"
			android:layout_width="fill_parent" android:layout_height="wrap_content"></TextView>
			
			
		<LinearLayout android:layout_height="wrap_content"
			android:layout_width="match_parent" android:id="@+id/get_code_by_office_layout"
			android:orientation="vertical" android:padding="10dp" >
			<TextView android:id="@+id/get_code_by_office_title" android:text="@string/search_by_office_title"
				style="@style/subtitle_style"
			 	android:layout_height="wrap_content" android:layout_width="wrap_content"></TextView>
			<TableLayout android:stretchColumns="*"
				android:layout_height="fill_parent" android:id="@+id/enter_office_details_layout"
				android:layout_width="match_parent">
				<TableRow android:id="@+id/select_division_row"
					android:layout_width="fill_parent" android:layout_height="fill_parent">
					<TextView android:text="@string/division_label" style="@style/result_style"
						android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="5dp"></TextView>
				</TableRow>
				<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<Spinner android:prompt="@string/division_list_header"
						android:layout_width="match_parent" android:id="@+id/select_division_dropdown"
						android:layout_height="wrap_content"></Spinner>
				</TableRow>
				<TableRow android:id="@+id/select_post_office_row"
					android:layout_width="fill_parent" android:layout_height="wrap_content">
					<TextView android:id="@+id/post_office_label" style="@style/result_style"
						android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="5dp"
						android:text="@string/post_office_label"></TextView>
				</TableRow>
				<TableRow android:id="@+id/tableRow2" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<Spinner android:id="@+id/select_postoffice_dropdown"
						android:prompt="@string/postOffice_list_header"
						android:layout_height="wrap_content" android:layout_width="fill_parent"></Spinner>
				</TableRow>

				<TableRow android:id="@+id/search_postalcode_row"
					android:gravity="right" android:layout_width="fill_parent"
					android:layout_height="wrap_content">
					<Button android:id="@+id/search_post_office_button"
						android:onClick="onSearchPostalCodeButtonClick"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/search_button_name" android:layout_gravity="right"
						android:padding="10dp" android:width="80dp"></Button>
				</TableRow>
			</TableLayout>
		</LinearLayout>
		<LinearLayout android:orientation="vertical"
			android:layout_height="wrap_content" android:id="@+id/get_office_by_code_layout"
			android:padding="10dp" android:layout_width="fill_parent">
			<TextView android:id="@+id/get_office_by_code_title" android:text="@string/search_by_code_title"
				style="@style/subtitle_style"
				android:layout_width="fill_parent" android:layout_height="wrap_content" ></TextView>
			<TableLayout android:stretchColumns="*"
				android:layout_height="wrap_content" android:id="@+id/enter_postal_code_layout"
				android:layout_width="match_parent">
				<TableRow android:id="@+id/enter_postal_code_row"
					android:layout_width="wrap_content" android:layout_height="wrap_content">
					<TextView android:text="@string/postal_code_label" style="@style/result_style" android:padding="5dp"
						android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
					<EditText android:id="@+id/postal_code_textbox"
						android:layout_width="200dp" android:layout_height="wrap_content">
						<requestFocus></requestFocus>
					</EditText>
				</TableRow>
				<TableRow android:id="@+id/search_post_office_row"
					android:gravity="right" android:layout_width="wrap_content"
					android:layout_height="wrap_content">
					<Button android:id="@+id/search_post_office_button"
						android:onClick="onSearchPostOfficeButtonClick"
						android:layout_width="wrap_content" android:layout_height="wrap_content"
						android:text="@string/search_button_name"></Button>
				</TableRow>
			</TableLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
